--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
                 android:hint="1234"
                 android:background="@android:drawable/editbox_background"
                 android:password="true"
+                android:drawableLeft="@drawable/ic_pass"
                 />
         </LinearLayout>
         <LinearLayout
@@ -64,14 +65,14 @@
                 android:text="Login"
                 android:layout_weight="1"
                 android:id="@+id/btnLogin"
-                android:background="#3333FF"
+                android:background="@drawable/background_button"
                 android:layout_marginRight="10dp"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:layout_weight="1"
-                android:background="#3333FF"
+                android:background="@drawable/background_button"
                 android:id="@+id/btnRegister"
                 android:layout_marginLeft="10dp"/>
         </LinearLayout>
